<resources>
    <string name="app_name">the-lyrics</string>
    <string name="songs_title">Title</string>
    <string name="songs_singer">Singer</string>
    <string name="songs_desc">Description</string>
    <string name="songs_lyric">Lyric</string>
    <string name="songs_date">Released at</string>
    <string name="profile">Profile</string>
    <string name="nama">Elmifta Yuana</string>
    <string name="email">meyuanaa@gmail.com</string>
    <string name="foto_diri">https://dicoding-web-img.sgp1.cdn.digitaloceanspaces.com/small/avatar/dos:eea49ef157defa13843dc68567404df820230127112932.png</string>
    <string-array name="data_titles">
        <item>Drown</item>
        <item>Consume</item>
        <item>Serana</item>
        <item>Rantau</item>
        <item>double take</item>
        <item>CHILL</item>
        <item>Gunjou</item>
        <item>Teddy Bear</item>
        <item>Shinunoga E-Wa</item>
        <item>Sweet Scar</item>
        <item>Penyendiri</item>
        <item>Ditto</item>
    </string-array>
    <string-array name="data_singers">
        <item>Bring Me The Horizon</item>
        <item>Chase Atlantic feat. Goon Des Garcons</item>
        <item>For Revenge</item>
        <item>Feby Putri</item>
        <item>dhruv</item>
        <item>Stray Kids</item>
        <item>YOASOBI</item>
        <item>STAYC</item>
        <item>Fuji Kaze</item>
        <item>Weird Genius, Prince Husein, Eka Gustiwana, Reza Oktovian, Billy Taner</item>
        <item>Misellia</item>
        <item>NewJeans</item>
    </string-array>
    <string-array name="data_descriptions">
        <item>Is originally released as a stand-alone single, a remixed version features on the band\'s fifth studio album "That\'s the Spirit" and was released as the lead single. The track, musically, marks a shift away from the band\'s previously established metalcore sound. </item>
        <item>A song inspired by the TV series Tokyo Ghoul. The song is seemingly written from the perspective of the main character, Kaneki – it details his struggles with accepting that he become a ghoul and must consume humans to live.</item>
        <item>Serana means languish, which the singer want to depicts sadness and regret over the loss of someone. The lyrics are also made darker with an orchestral touch so that it seems more touching.</item>
        <item>Is a single from Feby Putri\'s 1st album. The song itself, tells us about how people start real moves and real processes.</item>
        <item>“double take” follows dhruv as he falls in love with one of his friends, and he wonders if his friend feels the same way. The single was the first released song by dhruv after a couple of SoundCloud releases.</item>
        <item>Is a song about a separation between two people. When usually people tend to separate while having fights, this song tells people to calm down before separate.</item>
        <item>It tells about people who try to achieve their dream and become themselves.  Even though it might be sad, they still went forward and walked the path that they choose and liked.</item>
        <item>Is a retro funk track mixed with electronic pop creating the quirky sound STAYC is known for. On “Teddy Bear,” we got to learn to live life freely without having to always wait for their “teddy bear.”</item>
        <item>Is a love song where the singer admits he can’t live without the one he loves. In the chorus, he repeats, “Shinu no ga ii wa,” which is Japanese for “I’d rather die.” As a sign of his love, he confesses that he’s keen to sacrifice many essential things of life.</item>
        <item>It tells about someone\'s feelings of disappointment and wounds that are difficult to get rid of even though they have tried.</item>
        <item>It tells us about someone who liked it better to be alone and stayed in her/his own imagination because her/his is too scared to tell others about themselves</item>
        <item>Is a song about what we feel when we love someone and are not sure they’re returning our feelings. “Ditto” is an expression that refers to something already said: it would be enough for them to hear that, to understand that they are loved as much as they do.</item>
    </string-array>
    <string-array name="data_dates">
        <item>2014</item>
        <item>2017</item>
        <item>2022</item>
        <item>2022</item>
        <item>2019</item>
        <item>2022</item>
        <item>2020</item>
        <item>2023</item>
        <item>2020</item>
        <item>2017</item>
        <item>2023</item>
        <item>2022</item>
    </string-array>
</resources>