<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolBar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/bg_button"
            android:padding="4dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="@+id/toolbar" />

        <ImageView
            android:id="@+id/img_cover"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextSetting"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/songs_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_cover"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/tv_singer"
            style="@style/TextSetting"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/songs_singer"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_cover"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/TextSetting"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/songs_desc"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_cover"
            app:layout_constraintTop_toBottomOf="@+id/tv_singer" />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="img_cover, tv_description" />

        <TextView
            android:id="@+id/tv_date"
            style="@style/TextSetting"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/songs_date"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barrier" />

        <TextView
            android:id="@+id/tv_lyric"
            style="@style/TextSetting"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/songs_lyric"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>